--- a/Cms.Api/Cms.Api.csproj
+++ b/Cms.Api/Cms.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -20,4 +21,5 @@
     <ProjectReference Include="..\Common.AspNetCore\Common.AspNetCore.csproj" />
   </ItemGroup>
 
+  
 </Project>
